<resources>
    <string name="app_name">SharedPreferenceDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="welcome_back">Welcome back</string>
    <string name="create_new_account">Create new account</string>
</resources>