<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:clipToPadding="false"
    android:padding="@dimen/_24sdp"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/welcome_back"
            android:layout_gravity="center"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/login_to_continue"
            android:layout_gravity="center"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/secondary_text"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:importantForAutofill="no"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_text"
            />
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:importantForAutofill="no"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_text"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/sign_in"
                android:textSize = "@dimen/_13ssp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"
                android:visibility="visible"
                />
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:id="@+id/progressBar"
                android:visibility="invisible"
                />
        </FrameLayout>
        <TextView
            android:id="@+id/textSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_text"

            />
    </LinearLayout>
</ScrollView>