<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:clipToPadding="false"
    android:padding="@dimen/_24sdp"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/create_new_account"
            android:layout_gravity="center"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            />
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_81sdp"
                android:id="@+id/layout"
                android:layout_height="@dimen/_81sdp"
                android:backgroundTint="@android:color/black"
                app:cardCornerRadius="@dimen/_40sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:id="@+id/userImage"
                    android:layout_gravity="center"
                    android:src="@drawable/background_image"
                    android:scaleType="centerCrop"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add Image"
                    android:id="@+id/addImageTxt"
                    android:textSize="@dimen/_10ssp"
                    android:layout_gravity="center"
                    android:textColor="@color/secondary_text"
                    />
            </androidx.cardview.widget.CardView>

        </FrameLayout>
        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:importantForAutofill="no"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:hint="Name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_text"
            />
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:importantForAutofill="no"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_text"
            />
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:importantForAutofill="no"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_text"
            />
        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:importantForAutofill="no"
            android:background="@drawable/background_input"
            android:hint="Confim Password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_text"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="sign up"
                android:textSize = "@dimen/_13ssp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="visible"
                app:cornerRadius="@dimen/_8sdp"
                />
            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="gone"
                />
        </FrameLayout>

        
        <TextView
            android:id="@+id/textSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have account? SignIn"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_text"

            />
    </LinearLayout>
</ScrollView>